// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render and create organization 1`] = `
<div>
  <OrganizationDetailsStep
    finished={false}
    onOpen={[MockFunction]}
    open={true}
  >
    <OrganizationDetailsForm
      onContinue={[MockFunction]}
      submitText="continue"
    />
  </OrganizationDetailsStep>
  <PlanStep
    createOrganization={[Function]}
    onDone={[MockFunction]}
    onUpgradeFail={[MockFunction]}
    open={false}
    subscriptionPlans={
      Array [
        Object {
          "maxNcloc": 100000,
          "price": 10,
        },
        Object {
          "maxNcloc": 250000,
          "price": 75,
        },
      ]
    }
  />
</div>
`;

exports[`should render and create organization 2`] = `
<div>
  <OrganizationDetailsStep
    finished={false}
    onOpen={[MockFunction]}
    open={false}
  >
    <OrganizationDetailsForm
      onContinue={
        [MockFunction] {
          "calls": Array [
            Array [
              Object {
                "key": "foo",
                "name": "Foo",
              },
            ],
          ],
          "results": Array [
            Object {
              "type": "return",
              "value": undefined,
            },
          ],
        }
      }
      submitText="continue"
    />
  </OrganizationDetailsStep>
  <PlanStep
    createOrganization={[Function]}
    onDone={[MockFunction]}
    onUpgradeFail={[MockFunction]}
    open={true}
    subscriptionPlans={
      Array [
        Object {
          "maxNcloc": 100000,
          "price": 10,
        },
        Object {
          "maxNcloc": 250000,
          "price": 75,
        },
      ]
    }
  />
</div>
`;
